@@ -2,7 +2,6 @@ package org.jabref.logic.cleanup;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 
 import javax.xml.transform.TransformerException;
@@ -96,7 +95,7 @@ class XmpMetadataCleanupTest {
         LinkedFile linkedFile = new LinkedFile("Test PDF", pdfFile, "PDF");
         olly2018.addFile(linkedFile);
         when(databaseContext.getFileDirectories(any(FilePreferences.class)))
-                .thenReturn(Collections.singletonList(tempDir));
+                .thenReturn(List.of(tempDir));
 
         List<FieldChange> changes = cleanupJob.cleanup(olly2018);
         List<FieldChange> expectedChanges = List.of(new FieldChange(
@@ -121,10 +120,9 @@ class XmpMetadataCleanupTest {
         assertEquals(List.of(), xmpReader.readRawXmp(pdfFile));
 
         LinkedFile linkedFile = new LinkedFile("Test PDF", pdfFile, "PDF");
-        BibEntry bibEntry = new BibEntry().withFiles(Collections.singletonList(linkedFile));
+        BibEntry bibEntry = new BibEntry().withFiles(List.of(linkedFile));
 
         List<FieldChange> changes = cleanupJob.cleanup(bibEntry);
         assertEquals(List.of(), changes);
     }
 }
-
